# guile-gobject-introspection

./: .gitignore  Makefile.am  README  configure.ac  guix.scm
lib/: .gitignore
modules/: Makefile.am  gir.scm
modules/gir/: g-object.scm  info.scm  infos.scm  repository.scm
modules/gir/g-object/: g-closure.scm  g-parameter.scm  g-signal.scm  g-type.scm  g-value.scm  utils.scm
modules/gir/g-object/g-lib/: g-error.scm  g-quark.scm
src/: Makefile.am  g-type.c  g-type.h  gc.c  gc.h  gclosure.c  gclosure.h  ggi-argument.c  ggi-argument.h  ggi-array.c  ggi-array.h  ggi-basic-types.c  ggi-basic-types.h  ggi-cache.c  ggi-cache.h  ggi-callable-proxy.h  ggi-callback.h  ggi-ccallback.c  ggi-ccallback.h  ggi-closure.c  ggi-closure.h  ggi-enum-marshal.c  ggi-enum-marshal.h  ggi-error.c  ggi-error.h  ggi-function.c  ggi-function.h  ggi-hashtable.c  ggi-hashtable.h  ggi-info.c  ggi-info.h  ggi-infos.c  ggi-infos.h  ggi-invoke-state-struct.h  ggi-invoke.c  ggi-invoke.h  ggi-list.c  ggi-list.h  ggi-marshal-cleanup.h  ggi-object.c  (+48 more)
src/module/: Makefile.am  g-object.scm  gi.scm  gir.scm  gobject.scm  pre-install-env  pre-install-env.in
src/module/g-object/: g-type.scm
src/module/gi/: info.scm  repository.scm
src/module/gir/: info.scm  repository.scm
src/module/glib/: gerror.scm  gquark.scm  utils.scm
src/module/gobject/: gclosure.scm  gparameter.scm  gsignal.scm  gtype.scm  gvalue.scm
